--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "nodemailer": "^6.9.15"
   }
 }
