--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
-    "nodemailer": "^6.9.15"
+    "google-auth-library": "^9.0.0"
   }
 }
